This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.7.0
=============
- Major renaming of variables, such as getxxxNumber() into getNxxx().
  Some examples:
  getVariableNumber() or getNVariables() becomes getNVar()
  getSampleNumber() becomes getNSample()
  getActiveSampleNumber() becomes getNSampleActive()
  getNumberActiveAndDefined() becomes getNSampleActiveAndDefined()
  getLocatorNumber() or getLocNumber() becomes getNLoc()
  getCovaNumber() becomes getNCov()
  getDriftNumber() becomes getNDrift()
  getIntervalNumber() becomes getNInterval()

  isVariableNumberComparedTo() becomes isNVarComparedTo()

Release 1.6.0
=============
- in db::getAllCoordinatesMap, adding possibility to select within a Box.
- new method in DbLine: createVerticalFromGrid()
- Migrate: in Grid to Grid, perform interpolation if flag_inter is True
- Add version in functions loadDoc and loadData (Python and R)
- Fix loadData in R when trying to download the data file from the web (require 'lares' package)
- in Model::createFromParam, use Default Space when given space argument is null.
- Fix loadData under windows ('\' was added in the URL)
- in Db::setLocator, if locatorIndex is set to -1, the new locator is ADDED to already existing ones.
- Class IProjMatrix renamed as IProj
- Class ShiftOpCs renamed as ShiftOpMatrix
- Class PrecisionOpCs renamed as PrecisionOpMatrix
- The library 'nlopt' is know used to perform optimization. At time, it should replace FOXLEG in the Automatic Structure Recognition (model_auto).
- The argument 'domain' has been added to API functions 'krigingSPDE', 'simulateSPDE' and 'logLikelihoddSPDE'. It allows specifying the extension of the domain covered by the SPDE meshing. If not defined, it is elaborated starting from argument 'dbin' and/or 'dbout'.
- ExtractDiag() of a PrecisionOp in Matrix-free version (test_PrecisionOp.py)