@@ -2423,3 +2423,30 @@ double Model::computeLogLikelihood(const Db* db, bool verbose)
   return loglike;
 }
 
+Model* Model::createFillRandom(
+  int ndim, int nvar, const std::vector<ECov>& types, double hmax, int order)
+{
+  // Create the Covariance Part
+  Model* model = Model::create(CovContext(nvar, ndim));
+  int ncov = (int)types.size();
+  for (int icov = 0; icov < ncov; icov++)
+  {
+    MatrixSquareSymmetric* sill =
+      MatrixSquareSymmetric::createRandomDefinitePositive(nvar);
+    double range = (hmax * icov) / (2. * ncov);
+    model->addCovFromParam(types[icov], range, 0., 1., VectorDouble(), *sill);
+    delete sill;
+  }
+
+  // Create the Drift part
+  if (order < 0)
+  { 
+    VectorDouble means = VH::simulateGaussian(nvar);
+    model->setMeans(means);
+  }
+  else
+  {
+    model->setDriftIRF(order, 0);
+  }
+  return model;
+}
