@@ -1,9 +1,10 @@
+Range is too small (0.000000). It has been replaced by 1.
 Conditional simulation(s) on grid using Turning Bands:
 - Data (4) samples
 - Grid (20 x 20)
 - Number of Bands = 1000
 - Number of simulations = 2
-#NO_DIFF# Non-conditional Simulation on Grid: 116 ms. (Ref = 6800 ms.)
+#NO_DIFF# Non-conditional Simulation on Grid: 119 ms. (Ref = 6800 ms.)
 
 Data Base Grid Characteristics
 ==============================
@@ -13,32 +14,32 @@ Data Base Statistics
 4 - Name Simu.z-1.1 - Locator z1
  Nb of data          =        400
  Nb of active values =        400
- Minimum value       =     -3.475
- Maximum value       =      3.764
- Mean value          =     -0.274
- Standard Deviation  =      1.327
- Variance            =      1.762
+ Minimum value       =     -5.367
+ Maximum value       =      3.280
+ Mean value          =     -1.451
+ Standard Deviation  =      1.563
+ Variance            =      2.443
 5 - Name Simu.z-1.2 - Locator z2
  Nb of data          =        400
  Nb of active values =        400
- Minimum value       =     -3.638
- Maximum value       =      5.578
- Mean value          =      0.422
- Standard Deviation  =      1.768
- Variance            =      3.126
+ Minimum value       =     -5.000
+ Maximum value       =      3.036
+ Mean value          =     -1.655
+ Standard Deviation  =      1.639
+ Variance            =      2.687
 6 - Name Simu.z-2.1 - Locator z3
  Nb of data          =        400
  Nb of active values =        400
- Minimum value       =     -2.549
- Maximum value       =      3.532
- Mean value          =      0.105
- Standard Deviation  =      1.141
- Variance            =      1.302
+ Minimum value       =     -4.366
+ Maximum value       =      2.385
+ Mean value          =     -1.359
+ Standard Deviation  =      1.294
+ Variance            =      1.673
 7 - Name Simu.z-2.2 - Locator z4
  Nb of data          =        400
  Nb of active values =        400
- Minimum value       =     -2.602
- Maximum value       =      5.301
- Mean value          =      0.682
- Standard Deviation  =      1.453
- Variance            =      2.112
+ Minimum value       =     -4.159
+ Maximum value       =      2.677
+ Mean value          =     -1.060
+ Standard Deviation  =      1.355
+ Variance            =      1.835
